Fix cards on mobile layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,17 +6,18 @@ body {
 }
 
 header {
-  padding: 0 3.5vw;
+  padding-left: 3.5vw;
+  padding-right: 3.5vw;
   text-align: center;
 }
 
 main {
   position: relative;
-  top: 10vh;
+  top: 9vh;
 }
 
 header h1 {
-  font-size: 3.5vh;
+  font-size: 3.45vh;
   font-weight: 400;
 }
 
@@ -34,15 +35,46 @@ header p {
 }
 
 .card-columns .card {
-  margin-bottom: 3vh;
+  border-style: solid;
+  border-top-width: .5vh;
+  margin-bottom: 3.75vh;
+  height: 29.92vh;
 }
 
 .card h1{
+  margin-top: 2vh;
   font-size: 3.33vh;
   font-weight: 600;
+  padding-left: 6vw;
+  padding-right: 6vw;
 }
 
 .card p{
   font-size: 2.1vh;
-  padding: 0 3.5vw;
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+
+.card1 {
+  border-top-color: hsl(180, 62%, 55%);
+}
+
+.card2 {
+  border-top-color: hsl(0, 78%, 62%);
+}
+
+.card3 {
+  border-top-color: hsl(34, 97%, 64%);
+}
+
+.card4 {
+  border-top-color: hsl(212, 86%, 64%);
+}
+
+.icon, .icon img{
+  margin-top: 1.25vh;
+  margin-left: auto;
+  margin-right: 5vw;
+  width: 15vw;
+  height: 7.84vh;
 }
